Organize discussions, lecture notes, assignments

--- a/study-notes/dis-10-04-F.md
+++ b/study-notes/dis-10-04-F.md
@@ -1,3 +1,2 @@
-TODO: watch lecture for handwritten notes
-TODO: watch lecture for handwritten notes
-TODO: watch lecture for handwritten notes
+# Discussion 6
+
