--- a/study-notes/lec-09-24-T.md
+++ b/study-notes/lec-09-24-T.md
@@ -1,4 +1,101 @@
 # L9 - Products and Isomorphisms
 
 *Attended*
-[Recording](https://leccap.engin.umich.edu/leccap/player/r/T7x2fR)TODO: watch lecture for handwritten notes
+[Recording](https://leccap.engin.umich.edu/leccap/player/r/T7x2fR)
+
+Typing Rules for Functions via Simply Typed Calculus
+
+* All functions follow definition (Tin -> Tout)
+  * Types preserved regardless of how function arguments are constructed
+  * Functions are applied (**a.k.a Elimination Form**)
+
+
+## Type Safety
+
+Defined by: 
+
+* Typing Preservation 
+  * If a typing context *is empty*, and a typed expression evaluates to a value, then the typing context entails the value is the same type
+  * Cannot assume for all typing contexts since free variables can be introduced
+* Typing Progress
+  * No undefined behavior
+  * If a typing context is empty, and there is a typed expression, then either the expression is a value or evaluates to some value
+
+## Implementing Type Checker
+
+
+### Type Analyzer
+
+An operation that takes in some 
+* typing context
+* expression
+* proposed type
+and outputs whether the expression derives/evaluates to the proposed type (i.e True/False)
+
+**Correctness/Soundness Theorem:**
+```
+if analyzer(context, expresssion, type); then: 
+  the context asserts that the expression holds that type
+else:
+  typing error on the expression
+```
+
+**Completeness Theorem**
+```
+if the typing context asserts that an expression has some type; then
+  the analyzer will evalaute the expression to that type
+```
+### Type Synthesizer
+
+An operation that takes in some
+* typing context
+* expression
+and output an type option that the expression would derive. 
+
+**Soundness Theorem**
+```
+If synth(context, expression) = type.option ; then
+  the context asserts the overall type on the expression
+```
+
+NOTE: SYNTHESIZER DOES NOT FOLLOW COMPLETENESS
+
+Thus -> **Solution for Completeness Theorem**
+* Require type annotations on function arguments
+* All expressions will exhibit some unique Type
+```python
+
+# Example: 
+fun x: type_in -> type_out 
+fun x: type_in -> e: expression
+# since functions are defined by some expression,
+# e:expression must exhibit type_out
+
+```
+
+### Type Inference
+
+Given some constraints defined in expressions (via type annotations), 
+many types can be inferred 
+
+**Function Typing**
+
+-> syntax used in defining functions
+
+```python
+
+# Recall: Currying
+
+let y = 
+  fun m:Num -> 
+    fun x:Num -> 
+      fun b:Num -> m * x + b: Num -> (Num -> (Num -> Num)) # m(x(b))
+
+```
+
+NOTE: -> IS RIGHT ASSOCIATIVE
+
+## Product Types
+
+Groups valued into compound types (pairs, tuples)
+
