--- a/study-notes/dis-10-11-F.md
+++ b/study-notes/dis-10-11-F.md
@@ -1,3 +1,1 @@
-TODO: watch lecture for handwritten notes
-TODO: watch lecture for handwritten notes
-TODO: watch lecture for handwritten notes
+Discussion 7
